# python-workshop-25

./: .gitignore  README.md  pyproject.toml  python_workshop_examples.ipynb  python_workshop_solutions.ipynb  python_workshop_tasks.ipynb
